--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,9 @@
-.container {
-    height: 60vh;
+.flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-between;
+    justify-content: space-around;
+    text-align: center;
+    margin-bottom: 20px;
 }
