--- a/src/styles/image.css
+++ b/src/styles/image.css
@@ -1,5 +1,51 @@
 .fixed-size {
     margin-top: 20px;
-    width: 300px;
-    height: 300px;
+    /* width: 300px;
+    height: 300px; */
+}
+
+.img {
+    border: solid 2px;
+    border-bottom-color: #ffc822;
+    border-left-color: #fecb2f;
+    border-right-color: #fecb2f;
+    border-top-color: #ffc822;
+}
+
+.frame {
+    background-color: #fcd962;
+    border: solid 3vmin #e19c00;
+    border-bottom-color: #e19c00;
+    border-left-color: #e19c00;
+    border-radius: 2px;
+    border-right-color: hsl(42, 88%, 76%);
+    border-top-color: #e19c00;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, .25) inset, 0 5px 10px 5px rgba(0, 0, 0, .25);
+    box-sizing: border-box;
+    display: inline-block;
+    margin: 1vh 1vw;
+    height: 250px;
+    padding: 1vmin;
+    position: relative;
+    text-align: center;
+    &:before {
+        border-radius: 2px;
+        bottom: -2vmin;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .25) inset;
+        content: "";
+        left: -2vmin;
+        position: absolute;
+        right: -2vmin;
+        top: -2vmin;
+    }
+    &:after {
+        border-radius: 2px;
+        bottom: -2.5vmin;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .25);
+        content: "";
+        left: -2.5vmin;
+        position: absolute;
+        right: -2.5vmin;
+        top: -2.5vmin;
+    }
 }
