--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,7 +11,6 @@
 
 h1 {
     padding-top: 5vh;
-    font-size: 56px;
     text-transform: uppercase;
     font-size: 72px;
     background: -webkit-linear-gradient( #a2d1df, #fff);
@@ -23,4 +22,21 @@ h1 {
 h3 {
     font-size: 24px;
     padding-top: 5vh;
+}
+
+@media only screen and (max-width: 600px) {
+    #header {
+        background-position: left;
+        height: 15vh;
+        background-size: auto;
+    }
+    h1 {
+        font-size: 28px;
+        padding-top: 10px;
+        color: #20373f;
+    }
+    h3 {
+        padding-top: 10px;
+        font-size: 18px;
+    }
 }
