trying to fix ramdomizeImages()

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -12,6 +12,10 @@ h2 {
     margin: auto;
 }
 
+.red {
+    color: #fe0303;
+}
+
 @media only screen and (max-width: 600px) {
     #nav {
         display: block;
